# ntolen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: libSDL3.dylib  libSDL3_image.dylib  libSDL3_ttf.dylib
lib/mosc/api/: msc.h
lib/mosc/src/builtin/: Core.c
lib/mosc/src/builtin/core/: core.msc  core.msc.inc
lib/mosc/src/common/: codes.h  constants.h
lib/mosc/src/compiler/: Compiler.c
lib/mosc/src/runtime/: MVM.c  debuger.c
scripts/: embed_modules.py  set_executable_path_mac.sh  setup_sdl_on_linux.sh  setup_sdl_on_mac.sh  vars.sh
src/: main.cpp
src/core/: Input.cpp  Input.h  Input.msc  Input.msc.inc  InputProcessor.h  Mosc.cpp  Mosc.h  Ntolen.cpp  Ntolen.h  Ntolen.msc  Ntolen.msc.inc  PackageInstaller.cpp  PackageInstaller.h  Screen.cpp  Screen.h  Texture.h  UIComponent.cpp  UIComponent.h
src/core/widget/: UI.cpp  UI.h  UI.msc  UI.msc.inc  Window.cpp  Window.h  surface.hpp
src/engine/: GameEngine.cpp  GameEngine.h
src/helper/: Path.cpp  Path.h  ResourceManager.cpp  ResourceManager.h  color.hpp  logger.cpp  logger.h
test/: hello.msc
test/core/: Game.msc  painter.msc
